# turtlebot3_controlrace

./: CMakeLists.txt  README.md  package.xml
launch/: turtlebot3_controlrace.launch.py
models/turtlebot3_burger/: model.config  model.sdf
models/turtlebot3_controlrace/: model.config
models/turtlebot3_controlrace/obstacle_horizontal/: model.config
models/turtlebot3_controlrace/obstacle_vertical/: model.config
models/turtlebot3_controlrace/sign_goal/: model.config  model.sdf
models/turtlebot3_controlrace/sign_goal/materials/scripts/: sign_goal.material
models/turtlebot3_controlrace/sign_start/: model.config  model.sdf
models/turtlebot3_controlrace/sign_start/materials/scripts/: sign_start.material
worlds/turtlebot3_controlrace/: burger.model
