<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_controlrace</name>
  <version>2.0.0</version>
  <description>
    Gazebo simulation package for the TurtleBot3 Control Race!!!!!!!!
  </description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="issue tracker">https://github.com/rjshim/turtlebot3_controlrace/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>turtlebot3</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
